fix social icon layout bug

--- a/src/components/Header/Hamburger/hamburger.module.css
+++ b/src/components/Header/Hamburger/hamburger.module.css
@@ -7,7 +7,9 @@
 .HamburgerNav {
   z-index: 1000;
   position:absolute;
-  display:block;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--theme-color-main);
   left:0px;
   width:100%;
@@ -16,6 +18,7 @@
   height: calc(100% - 135px);
   opacity:0;
   transition: opacity 0.2s ease-in;
+  padding:30px;
 }
 
 .HamburgerNavOpen {
@@ -25,7 +28,6 @@
 .HamburgerLink {
   display:block;
   padding: 33px 0px; 
-  padding-left: 30px;
 
   font-style: normal;
   font-weight: 500;
@@ -68,9 +70,22 @@
   transform: scaleX(100%) !important;
 }
 
+.HeaderSocial {
+  display:flex;
+  column-gap: 20px;
+  padding-left: 30px;
+}
+
+.socialIcon {
+  font-size: 50px;
+  color: var(--theme-color-white);
+}
+
+
 @media screen and (min-width: 1264px) {
   .HamburgerNav {
     display:flex;
+    flex-direction:row;
     justify-content: space-between;
     width:450px;
     position:static;
@@ -109,6 +124,10 @@
   
   .Hamburger {
     display:none;
+  }
+
+  .socialIcon {
+    color: var(--theme-color-text);
   }
 }
 
