--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -22,28 +22,10 @@
   gap: 18px;
 }
 
-.HeaderSocial {
-  display:flex;
-  position:absolute;
-  left: 30px;
-  bottom: 30px;
-  z-index: 1000;
-  column-gap: 20px;
-}
-
-.socialIcon {
-  font-size: 50px;
-  color: var(--theme-color-white);
-}
-
 @media screen and (min-width: 1264px) {
   .Header {
     background-color:white;
     padding: 75px 0px;
-  }
-
-  .HeaderSocial {
-    position:static;
   }
 
   .Logo {
